# north-traders-analytics-engineering-demo

./: README.md  pyproject.toml
northwind-trading/: dbt_project.yml
northwind-trading/models/analytics_obt/: obt_orders_overview.sql
northwind-trading/models/staging/: sources.yml  stg_customer.sql  stg_employees.sql  stg_orders.sql
northwind-trading/models/warehouse/: dim_customer.sql  dim_date.sql  dim_employees.sql  fact_orders.sql
tests/: test_northwind_trading_dby.py
