[tool.poetry]
name = "northwind-trading-dbt"
version = "0.1.0"
description = ""
authors = ["tareklel@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
dbt-bigquery = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
